more findbugs fixes. mainly closing database connections.